# crispy-text

./: Cargo.toml  README.md
examples/develop/: Cargo.toml
examples/develop/src/: main.rs
src/renderer/: gl_renderer.rs  mod.rs
src/renderer/gl_renderer/: shader.rs
src/shaders/: text.frag.glsl
