[package]
name = "develop"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pen-and-paper = { path = "../../" }
winit = "0.24.0"
raw-gl-context = "0.1"
gl = "0.14.0"